functional photo viewer ready

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     </symbol>
   </svg>
   <section class="photo-app">
-    <span class="test">test</span>
+    <div class="auto-play">></div>
+    <div class="main-carousel">
+    </div>
   </section>
   <section class="timer-app isHidden">
     <div class="timer-container">
