--- a/index.html
+++ b/index.html
@@ -26,9 +26,19 @@
     <symbol id="stop" viewBox="0 0 100 100">
       <g><path style="opacity:1;color:#FFFFFF;fill:#FFFFFF;fill-opacity:1;stroke:none;stroke-width:5;marker:none;visibility:visible;display:inline;overflow:visible;enable-background:accumulate;" d="M 50 5 C 25.182716 5 5 25.1827 5 50 C 5 74.8173 25.182716 95 50 95 C 74.817284 95 95 74.8173 95 50 C 95 25.1827 74.817284 5 50 5 z M 50 11 C 71.574644 11 89 28.42534 89 50 C 89 71.5746 71.574644 89 50 89 C 28.425356 89 11 71.5746 11 50 C 11 28.42534 28.425356 11 50 11 z M 32.6875 30 A 3.0003 3.0003 0 0 0 30 33 L 30 67 A 3.0003 3.0003 0 0 0 33 70 L 67 70 A 3.0003 3.0003 0 0 0 70 67 L 70 33 A 3.0003 3.0003 0 0 0 67 30 L 33 30 A 3.0003 3.0003 0 0 0 32.6875 30 z M 36 36 L 64 36 L 64 64 L 36 64 L 36 36 z "/></g>
     </symbol>
+    <symbol id="timer" viewBox="0 0 29 36.25">
+      <g><g><path style="opacity:1;color:#FFFFFF;fill:#FFFFFF;fill-opacity:1;stroke:none;stroke-width:4;marker:none;visibility:visible;display:inline;overflow:visible;enable-background:accumulate;" d="M14.5,27C7.607,27,2,21.393,2,14.5c0-3.291,1.334-6.512,3.661-8.839c0.391-0.391,1.023-0.391,1.414,0s0.391,1.023,0,1.414    C5.121,9.03,4,11.736,4,14.5C4,20.29,8.71,25,14.5,25S25,20.29,25,14.5c0-5.453-4.177-9.948-9.5-10.453V9c0,0.552-0.448,1-1,1    s-1-0.448-1-1V3c0-0.552,0.448-1,1-1C21.393,2,27,7.607,27,14.5S21.393,27,14.5,27z"/></g><g><path style="opacity:1;color:#FFFFFF;fill:#FFFFFF;fill-opacity:1;stroke:none;stroke-width:4;marker:none;visibility:visible;display:inline;overflow:visible;enable-background:accumulate;" d="M8.793,10.207c-0.391-0.391-0.391-1.024,0-1.414c0.391-0.391,1.024-0.391,1.414,0l5.707,4.293    c0.781,0.781,0.781,2.047,0,2.828c-0.781,0.781-2.047,0.781-2.828,0L8.793,10.207z"/></g></g>
+    </symbol>
   </svg>
+  <div class="preloader">
+    <div class="spinner">
+      <div class="bounce1"></div>
+      <div class="bounce2"></div>
+      <div class="bounce3"></div>
+    </div>
+  </div>
   <section class="photo-app">
-    <div class="auto-play">></div>
+    <div class="auto-play"><svg class="resume"><use xlink:href="#pause"></svg></div>
     <div class="main-carousel">
     </div>
   </section>
@@ -61,7 +71,8 @@
     </div>
   </section>
   <div class="toggle-apps">
-      <svg class="icon"><use xlink:href="#cancel"></svg>
+    <svg class="close isHidden"><use xlink:href="#cancel"></svg>
+    <svg class="timer"><use xlink:href="#timer"></svg>
   </div>
   <script src="js/dist/app.dist.js"></script>
 </body>
