add description tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>B Timer</title>
+  <title>Timer over photos</title>
+  <meta name="description" content="Stay focused.">
   <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -30,13 +31,6 @@
       <g><g><path style="opacity:1;color:#FFFFFF;fill:#FFFFFF;fill-opacity:1;stroke:none;stroke-width:4;marker:none;visibility:visible;display:inline;overflow:visible;enable-background:accumulate;" d="M14.5,27C7.607,27,2,21.393,2,14.5c0-3.291,1.334-6.512,3.661-8.839c0.391-0.391,1.023-0.391,1.414,0s0.391,1.023,0,1.414    C5.121,9.03,4,11.736,4,14.5C4,20.29,8.71,25,14.5,25S25,20.29,25,14.5c0-5.453-4.177-9.948-9.5-10.453V9c0,0.552-0.448,1-1,1    s-1-0.448-1-1V3c0-0.552,0.448-1,1-1C21.393,2,27,7.607,27,14.5S21.393,27,14.5,27z"/></g><g><path style="opacity:1;color:#FFFFFF;fill:#FFFFFF;fill-opacity:1;stroke:none;stroke-width:4;marker:none;visibility:visible;display:inline;overflow:visible;enable-background:accumulate;" d="M8.793,10.207c-0.391-0.391-0.391-1.024,0-1.414c0.391-0.391,1.024-0.391,1.414,0l5.707,4.293    c0.781,0.781,0.781,2.047,0,2.828c-0.781,0.781-2.047,0.781-2.828,0L8.793,10.207z"/></g></g>
     </symbol>
   </svg>
-  <div class="preloader">
-    <div class="spinner">
-      <div class="bounce1"></div>
-      <div class="bounce2"></div>
-      <div class="bounce3"></div>
-    </div>
-  </div>
   <section class="photo-app">
     <div class="auto-play"><svg class="resume"><use xlink:href="#pause"></svg></div>
     <div class="main-carousel">
@@ -70,6 +64,14 @@
       </div>
     </div>
   </section>
+  <div class="preloader">
+    <div class="spinner">
+      <div class="bounce1"></div>
+      <div class="bounce2"></div>
+      <div class="bounce3"></div>
+    </div>
+  </div>
+
   <div class="toggle-apps">
     <svg class="close isHidden"><use xlink:href="#cancel"></svg>
     <svg class="timer"><use xlink:href="#timer"></svg>
