add shutdown button && js keyboardevent trigger

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <svg class="close isHidden"><use xlink:href="#cancel"></svg>
     <svg class="timer"><use xlink:href="#timer"></svg>
   </div>
+  <div class="shutdown"></div>
   <script src="js/dist/app.dist.js"></script>
 </body>
 </html>
